@@ -1,3 +1,6 @@
+DATE: 01-06-2005 19:15
+[dimeglio] Use automated dependencies generator
+
 DATE: 21-03-2005 17:21
 [dimeglio] Implemented status method
 
